# hohumi

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  main.py  pyproject.toml  pyrefly.toml  requirements.txt  update.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/instructions/: command.instructions.md
.github/workflows/: build.yml  build_and_push.yml
cogs/: admin_cog.py  announce.py  error_handler.py  modal.py  reminder_manager.py  thread_keeper.py
cogs/utils/: common.py  db.py  guild_setting.py  migrate.py  notify_role.py  reminder_exclusions.py  scheduled_closures.py  thread_channels.py  thread_commands.py  thread_config.py  thread_management.py
data/: Internal department2.afdesign
